--- a/bio/jc_bio.html
+++ b/bio/jc_bio.html
@@ -29,26 +29,26 @@
   <div class="row">
     <div class="col-sm-4">
       <h3>past</h3>
-      <p>Raised in Bloomington, I grew up with a techy dad, but I always preferred language arts over computer languages.</p>
-      <p>Sticking with my passion for prose and poetry, I graduated from IWU with a degree in literature. As you may suspect, writing beautiful essays is not the most sought after skill.</p>
+      <p>Raised in the Midwest, I grew up with a techy dad, but I always preferred language arts over computer languages.</p>
+      <p>Sticking with my passion for prose and poetry, I graduated from Illinois Wesleyan University with a degree in literature. As you may suspect, writing beautiful essays is not the most sought after skill.</p>
 	  <p>My job search landed me in Chicago where my communication skills built relationships with clients at Hewitt. When family drew me back south, I found a rewarding role as a psychology practice manager.</p>
     </div>
     <div class="col-sm-4 text-center">
       <h3>present</h3>
-      <p>Although mental health care is a rewarding field with opportunities for enhancement, I found the constraints of a small-scale operation too limiting. So, when I learned State Farm had a department dedicated to innovating, that was all it took.<br>I was hooked.</p>
-	  <p>I've been an analyst in Innovation and RED Labs since August 2015, and I cannot fathom ever working outside the realm of innovation. I get to ideate, create and even help curate Tech Trends! This is my dream opportunity -- collaborating with the intent to bring far-reaching positive change.</p>
+      <p>Although mental health care is a fulfilling field and practice management provided me with a breadth of experience, I found the constraints of private practice limiting. So, when I learned State Farm had a department dedicated to innovating, that was all it took.<br>I was hooked.</p>
+	  <p>I've been part of an innovation team since August 2015, and I cannot fathom ever working outside the realm of innovation. Every day, I get to investigate, ideate and create.</p>
     </div>
     <div class="col-sm-4 text-right">  	
       <h3>future</h3>        
-      <p>I've always believed Labs can elevate the plane on which our business intersects with consumers and communities. To help actualize that vision, I know I will need to keep learning and growing.</p>
-	  <p>The goals I've set are simple. My development plan focuses on acquiring more human centered design experience as well as coding skills. I also realize I need to branch out and extend my network beyond Labs.</p>
-      <p>Lucky for me, <a href="https://www.yammer.com/statefarm.com/#/threads/inGroup?type=in_group&feedId=17340921">Zero to Hack Day Hero</a> ticks all three boxes!</p>
+      <p>I've always believed innovation can elevate the plane on which our business intersects with consumers and communities. To help actualize that vision, I know I will need to keep learning and growing.</p>
+	  <p>The goals I've set are simple. My development plan focuses on acquiring more human centered design experience as well as coding skills. I also realize I need to branch out and extend my network.</p>
+      <p>Lucky for me, the Intro to Programming nanodegree at <a href="https://www.udacity.com/course/intro-to-programming-nanodegree--nd000">Udacity.com</a> and the <a href="https://www.freecodecamp.org/cjenna">freeCodeCamp.org</a> community tick all three boxes!</p>
     </div>
 <div class="container">
   <div class="row">
 	  <div class="col-sm-10 card">
-      <h3 class="small"> <a href="mailto:jenna.crawford.fpbz@statefarm.com">Jenna Crawford</a></h3>
-      <p class="small">RED Labs | technology analyst</p>
+      <h3 class="small"> <a href="mailto:c.jenna@icloud.com">Jenna Crawford</a></h3>
+      <p class="small">L|H Innovation | State Farm</p>
     </div>
     <div class="col-sm-2">  	        
       <p><img src="profile.jpg" height="100"></p>
